--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ description = "Tensor schemes for fast matrix multiplication."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+  # "math",
   "numpy",
   "matplotlib",
   "tqdm",
   "pandas",
-  "time",
-  "torch"
+  # "time",
+  "torch",
 ]
 
 [tool.setuptools]
