--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "brentscheme"
-version = "0.1.0"
+version = "0.2.0"
 description = "Tensor schemes for fast matrix multiplication."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -17,7 +17,15 @@ dependencies = [
   # "time",
   "torch",
   "scipy",
+  "pytest",
 ]
+
+[project.optional-dependencies]
+test = ["pytest", "pytest-cov"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "-ra"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
